# lisa-plugin-btest

./: .gitignore  README.md  package-lock.json  package.json  tsconfig.json
.github/workflows/: push.yml  release.yml  test.yml
examples/test_gpio/: .clang-format  .gitignore  lisa-btest.yml
examples/test_gpio/firmware/: CMakeLists.txt  prj.conf
examples/test_gpio/firmware/src/: main.c  test_gpio.c
examples/test_gpio/tests/: test_gpio.py
examples/test_help/: .gitignore  lisa-btest.yml
examples/test_help/tests/: test_help.py
framework/python/: default_requirements.txt
framework/python/btest/: conftest.py  device.py  out_put_color.py  shell.py  utils.py
framework/python/usb2xxx/: LDFDecoder.py  can_uds.py  usb2adc.py  usb2ads1256.py  usb2can.py  usb2canfd.py  usb2gpio.py  usb2iic.py  usb2lin.py  usb2lin_ex.py  usb2pwm.py  usb2spi.py  usb2uart.py  usb_device.py
framework/python/usb2xxx/libs/mac_os/: libUSB2XXX.dylib
framework/templates/: lisa-btest.yml  sample.py  test_sample.py
framework/zephyr/1.0/: CMakeLists.txt
framework/zephyr/1.0/include/btest/: btest.c  btest.h
framework/zephyr/1.0/zephyr/: module.yml
framework/zephyr/example/: CMakeLists.txt  main.c  prj.conf
scripts/: list_probe.py
src/: const.ts  install.ts  integration.ts  main.ts
src/tasks/: dm.ts  exec.ts  framework.ts  index.ts  init.ts  list.ts  project.ts  test.ts
src/utils/: cmsis-dap.ts  extendExec.ts  framework.ts  getEnv.ts  integration.ts  lisa_ex.ts  makeEnv.ts  parseArgs.ts  path.ts  project.ts  pyocd.ts  shell.ts  typing.ts  workspace.ts
(+2 files in other folders)
